EOM-Margin Approval- notes in comments + misc

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -12,6 +12,7 @@ Accounting Period:
 @Html.ActionLink("Advertisers", "Index", "Advertisers")<br />
 @Html.ActionLink("Affiliates", "Index", "Affiliates")<br />
 <br />
+@Html.ActionLink("Accounting Sheet", "AccountingSheet", "Admin")<br />
 @Html.ActionLink("Affiliate Amounts", "AffiliateAmounts", "Workflow")<br />
 @Html.ActionLink("Margin Approvals", "MarginApprovals", "Admin")<br />
 @Html.ActionLink("Media Buyer Approvals", "Summary", "Payouts")<br />
