DAWeb- misc updates

--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/AdRoll.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/AdRoll.cshtml
@@ -11,7 +11,7 @@
 
 <h2>Programmatic</h2>
 
-ADRoll MTD Stats - @DateTime.Now.ToString()
+ADRoll MTD Stats - @DateTime.Now.ToShortDateString()
 
 <table>
 <tr>
