--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
@@ -4,7 +4,7 @@ Cake - by Advertiser
 <br />
 - @Html.ActionLink("Last 30 days, sort by margin", "CakeAdv", "Stats", new { numdays = 30, sort = "margin" }, null)
 <br />
-- @Html.ActionLink("...Top 5 (JSONP)", "CakeAdv", "Stats", new { numdays = 30, sort = "margin", take = 5, jsonp = true }, null)
+- @Html.ActionLink("...Top 5 (JSONP)", "CakeAdv", "Stats", new { numdays = 30, sort = "margin", take = 5, jsoncallback = "test" }, null)
 
 <br />
 <br />
