--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Stats/Links.cshtml
@@ -2,9 +2,9 @@
 
 Cake - by Advertiser
 <br />
-- @Html.ActionLink("Last 30 days, sort by margin", "CakeAdv", "Stats", new { numdays = 30, sort = "margin" }, null)
+- @Html.ActionLink("Last 30 days, sort by revenue", "CakeAdv", "Stats", new { numdays = 30, sort = "revenue" }, null)
 <br />
-- @Html.ActionLink("...Top 5 (JSONP)", "CakeAdv", "Stats", new { numdays = 30, sort = "margin", take = 5, jsoncallback = "test" }, null)
+- @Html.ActionLink("...Top 5 (JSONP)", "CakeAdv", "Stats", new { numdays = 30, sort = "revenue", take = 5, jsoncallback = "test" }, null)
 
 <br />
 <br />
