--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/SalesStats.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/SalesStats.cshtml
@@ -13,7 +13,7 @@
         <th colspan="2">With Replies</th>
         <th></th>
     </tr>
-@foreach (var stat in Model.OrderBy(s => s.Date).ThenBy(s => s.SalespersonId))
+@foreach (var stat in Model.OrderBy(s => s.Date).ThenBy(s => s.Salesperson.FullName))
 {
     <tr>
         <td>
