Sales stats update

--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/SalesStats.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/SalesStats.cshtml
@@ -39,5 +39,5 @@
 </table>
 
 <br />
-@Html.ActionLink("Enter next week's stats", "EditSalesStats") |
+@Html.ActionLink("Enter the next week's stats", "EditSalesStats") |
 @Html.ActionLink("Show all", "SalesStats", new { numweeks = -1 })
