--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/Variable.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Screens/Variable.cshtml
@@ -4,6 +4,7 @@
 
 @using (Html.BeginForm())
 {
+    @Html.Hidden("successAction", "Variables")
 <div>
     Name: @Html.DisplayFor(m => m.Name)
     <br />
@@ -16,3 +17,6 @@
     <input type="submit" value="Save" />
 </div>
 }
+
+<br />
+@Html.ActionLink("Cancel", "Variables")
