--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout2015.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout2015.cshtml
@@ -13,6 +13,7 @@
 
     <script src="~/Scripts/kendo/2015.1.408/jquery.min.js"></script>
     <script src="~/Scripts/kendo/2015.1.408/kendo.all.min.js"></script>
+    @RenderSection("head", required: false)
 </head>
 <body>
     @RenderBody()
