audit viewer- published to test

--- a/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Admin/Index.cshtml
@@ -22,3 +22,4 @@ Accounting Period:
 @Html.ActionLink("Advertiser Maintenance", "AdvertiserMaintenance", "Admin")<br />
 @Html.ActionLink("Affiliate Maintenance", "AffiliateMaintenance", "Admin")<br />
 @Html.ActionLink("Settings", "Settings", "Admin")<br />
+@Html.ActionLink("Audit", "Summaries", "Audit")<br />
