--- a/1/EomTool/EomToolWeb/Views/Audit/Item.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Audit/Item.cshtml
@@ -9,8 +9,8 @@
     <td>@item.id</td>
     <td rowspan="3">
         ADVERTISER: @item.AdvertiserName<br />
-        ACCTMGR: @item.AccountManagerName<br />
-        ADMGR: @item.AdManagerName
+        ACCT_MGR: @item.AccountManagerName<br />
+        AD_MGR: @item.AdManagerName
     </td>
 </tr>
 <tr>
