--- a/1/EomTool/EomToolWeb/Views/Shared/_Layout2015.cshtml
+++ b/1/EomTool/EomToolWeb/Views/Shared/_Layout2015.cshtml
@@ -14,7 +14,22 @@
     <script src="~/Scripts/kendo/2015.1.408/jquery.min.js"></script>
     <script src="~/Scripts/kendo/2015.1.408/kendo.all.min.js"></script>
     @RenderSection("head", required: false)
+    @if (ViewBag.UseTableCSS != null && ViewBag.UseTableCSS) {
+<style type="text/css" media="screen">
+
+table {
+    border:1px solid black;
+    border-collapse:collapse;
+}
+
+table th,td {
+    border:1px solid black;
+    padding:2px;
+}
+</style>
+    }
 </head>
+
 <body>
     @RenderBody()
     @RenderSection("scripts", required: false)
