BudgetTool- code for syncing an offer row (stats) + misc

--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
@@ -71,5 +71,8 @@
         @offer.BudgetUsedPercent.Value.ToString("P1")
     }
 </td>
+@*<td>
+    <input type="button" value="Sync" onclick="SynchOfferStats(@offer.OfferId)" />
+</td>*@
 <td>@offer.OfferStatus.OfferStatusName</td>
 <td>@offer.Hidden</td>
