--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
@@ -24,7 +24,7 @@ MTD Stats - @DateTime.Now.ToShortDateString()
     <td>
         @if (stat.Account.Platform.Code == DirectAgents.Domain.Entities.TD.Platform.Code_AdRoll)
         {
-            @Html.ActionLink(stat.AccountName, "AdRoll", new { advEid = stat.Account.ExternalId, area = "" })
+            @Html.ActionLink(stat.AccountName, "AdRoll", new { advEid = stat.Account.ExternalId })
         }
         else if (stat.Account.Platform.Code == DirectAgents.Domain.Entities.TD.Platform.Code_DBM)
         {
