--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Generic.cshtml
@@ -13,8 +13,10 @@
     <th>CPM</th>
     <th>CPC</th>
     <th>CPA</th>
-    <th>Conversions</th>
-    <th>Spend</th>
+    <th>PostClick Conv</th>
+    <th>PostView Conv</th>
+    <th>Total Conv</th>
+    <th>Cost</th>
 </tr>
 @foreach (var stat in Model.Stats)
 {
@@ -26,7 +28,9 @@
     <td style="text-align:center">@stat.CPM</td>
     <td style="text-align:center">@stat.CPC</td>
     <td style="text-align:center">@stat.CPA</td>
-    <td style="text-align:right">@stat.Conversions</td>
+    <td style="text-align:right">@stat.PostClickConv</td>
+    <td style="text-align:right">@stat.PostViewConv</td>
+    <td style="text-align:right">@stat.TotalConv</td>
     <td style="text-align:right">@stat.Cost</td>
 </tr>
 }
@@ -41,7 +45,9 @@
     <th>@tot.CPM</th>
     <th>@tot.CPC</th>
     <th>@tot.CPA</th>
-    <th>@tot.Conversions</th>
+    <th>@tot.PostClickConv</th>
+    <th>@tot.PostViewConv</th>
+    <th>@tot.TotalConv</th>
     <th>@tot.Cost</th>
 </tr>
 }
