--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/Account.cshtml
@@ -2,7 +2,7 @@
 
 <h2>Programmatic</h2>
 
-MTD Stats - @DateTime.Now.ToShortDateString()
+MTD Stats - @DateTime.Today.AddDays(-1).ToShortDateString()
 
 <table>
 <tr>
