--- a/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditSearchAccount.cshtml
+++ b/3/ClientPortal.Web/ClientPortal.Web/Areas/Admin/Views/SearchAdmin/EditSearchAccount.cshtml
@@ -1,4 +1,5 @@
-﻿@model ClientPortal.Data.Contexts.SearchAccount
+﻿@using ClientPortal.Data.Contexts
+@model SearchAccount
 @{
     var ajaxOptions = RazorHelpers.GetAjaxOptions("searchProfilesTab");
     var ajaxOpts_Post = RazorHelpers.GetAjaxOptions("searchProfilesTab", null, "Post");
@@ -27,6 +28,16 @@
                     <td>@Html.LabelFor(m => m.AccountCode, "AccountCode:")</td>
                     <td>@Html.EditorFor(m => m.AccountCode)</td>
                 </tr>
+@if (Model.Channel == SearchAccount.GoogleChannel || Model.Channel == SearchAccount.BingChannel) {
+                <tr>
+                    <td>@Html.LabelFor(m => m.RevPerOrder, "RevenuePerOrder:")</td>
+                    <td>@Html.EditorFor(m => m.RevPerOrder) <i>(Leave blank to use API value)</i></td>
+                </tr>
+                <tr>
+                    <td>@Html.LabelFor(m => m.MinSynchDate, "MinSynchDate:")</td>
+                    <td>@Html.TextBoxFor(m => m.MinSynchDate, "{0:d}") <i>(optional - earliest date to synch)</i></td>
+                </tr>
+}
                 <tr>
                     <td>@Html.LabelFor(m => m.Name, "Name:")</td>
                     <td>@Html.EditorFor(m => m.Name) <i>(Gets updated by the syncer)</i></td>
