--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/_ViewStart.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/_ViewStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "Shared/_LayoutTD.cshtml";
     ViewContext.Controller.ViewBag.UseTableCSS = true;
 }
