--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -1,4 +1,9 @@
 ﻿@model IEnumerable<DirectAgents.Domain.Entities.TD.Campaign>
+@{
+    var today = DateTime.Today;
+    var startOfMonth = new DateTime(today.Year, today.Month, 1);
+    var lastMonth = startOfMonth.AddMonths(-1);
+}
 
 <h2>Campaigns</h2>
 
@@ -6,16 +11,24 @@
 <tr>
     <th>Advertiser</th>
     <th>Campaign</th>
-    <th>Accounts</th>
+    <th>External Accounts</th>
     <th>Platforms</th>
+    <th>Stats</th>
 </tr>
 @foreach (var camp in Model)
 {
 <tr>
     <td>@camp.Advertiser.Name</td>
-    <td>@Html.ActionLink(camp.Name, "MTD", "Stats", new { campId = camp.Id }, null)</td>
-    <td style="text-align:center">@camp.Accounts.Count</td>
+    <td>@camp.Name</td>
+    <td style="text-align:center">
+        @Html.ActionLink(camp.Accounts.Count.ToString(), "Index", "Accounts", new { campId = camp.Id }, null)
+        (@Html.ActionLink("stats by account", "Account", "Stats", new { campId = camp.Id }, null))
+    </td>
     <td>@string.Join(",", camp.Accounts.Select(a => a.Platform).Distinct().Select(p => p.Name))</td>
+    <td>
+        @Html.ActionLink("MTD", "MTD", "Stats", new { campId = camp.Id }, null) |
+        @Html.ActionLink("Last Month", "MTD", "Stats", new { campId = camp.Id, date = lastMonth.ToShortDateString() }, null)
+    </td>
 </tr>
 }
 </table>
