--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/MTD.cshtml
@@ -22,11 +22,11 @@ Month: @budg.Date.ToString("MMM yyyy")
 </tr>
 <tr>
     <th>Mgmt Fee</th>
-    <td>@budg.MgmtFeePct.ToString("#.### \\%")</td>
+    <td>@budg.MgmtFeePct.ToString("#0.### \\%")</td>
 </tr>
 <tr>
     <th>Margin</th>
-    <td>@budg.MarginPct.ToString("#.### \\%")</td>
+    <td>@budg.MarginPct.ToString("#0.### \\%")</td>
 </tr>
 <tr>
     <th>Budget</th>
@@ -46,24 +46,30 @@ Month: @budg.Date.ToString("MMM yyyy")
     <td>Actual Cost</td>
     <td>@s.Cost.ToString("C")</td>
     <td>@budg.Cost().ToString("C")</td>
-    <td>@bs.FractionReached().ToString("#0.#%")</td>
+    <td>@bs.FractionReached().ToString("#0.##%")</td>
 </tr>
 <tr>
     <td>Media Spend</td>
-    <td>@bs.MediaSpend.ToString("C")</td>
+    <td>@bs.MediaSpend().ToString("C")</td>
     <td>@budg.MediaSpend.ToString("C")</td>
     <td></td>
 </tr>
 <tr>
     <td>Mgmt Fee</td>
-    <td>@bs.MgmtFee.ToString("C")</td>
+    <td>@bs.MgmtFee().ToString("C")</td>
     <td>@budg.MgmtFee().ToString("C")</td>
     <td></td>
 </tr>
 <tr>
     <td>Total Revenue</td>
-    <td>@bs.TotalRevenue.ToString("C")</td>
+    <td>@bs.TotalRevenue().ToString("C")</td>
     <td>@budg.TotalRevenue().ToString("C")</td>
+    <td></td>
+</tr>
+<tr>
+    <td>Margin</td>
+    <td>@bs.Margin().ToString("C")</td>
+    <td>@budg.Margin().ToString("C")</td>
     <td></td>
 </tr>
 </table>
