--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Accounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Accounts/Index.cshtml
@@ -1,11 +1,11 @@
-﻿@model IEnumerable<DirectAgents.Domain.Entities.TD.Account>
+﻿@model IEnumerable<DirectAgents.Domain.Entities.TD.ExtAccount>
 
 <h2>External Accounts</h2>
 
 <table>
 <tr>
     <th>Platform</th>
-    <th>Account</th>
+    <th>Ext Account</th>
 </tr>
 @foreach (var acct in Model)
 {
